Trunk
-----

 * Tab based desktop

 * Faster table view
 
 * Improved search queries
 
 * Much more dynamic field attributes : tooltip, background_color, editable,
   choices, prefix, suffix, arrow

 * Document merge import wizard
 
   .. image:: _static/mergedocumentwizard/wizard_widget.png
   
 * Support for SQLAlchemy 0.6.x
   
Release 10.07.02
----------------

 * Expanded search and filter options

   .. image:: _static/controls/header_widget.png
    
 * Search works for integer, date and float fields
 
   .. image:: _static/controls/search_control.png
 
 * Sorting in table views and OneToMany widgets
 
 * Importer forces validation before importing
 
 * User translatable labels on forms
 
 * Litebox image preview for image fields
 
 * New editors and delegates :
 
   * NoteDelegate
   
     .. image:: _static/editors/NoteEditor_editable.png
     
   * LabelDelegate
   * TextBoolDelegate
   
 * i18n improvements
 
 * Fix date editor on windows
 
 * Add a default model to store batch job information
 
 * Backup and restore available from the File menu
     
 * More documentation

Release 09.12.07
----------------

 * Sqlalchemy 5.6 compatible
 
 * Dynamic background colors and tooltips
 
   .. image:: _static/snippets/background_color.png
   
 * Generic import wizard
 
   .. image:: _static/importwizard/csv_wizard.png
 
 * The busy indicator in the status bar
 
   .. image:: _static/controls/status_bar.png
 
 * Support for lazy translations
 
 * Remove PIL dependency and only depend on QImage
 
 * Support multiple levels of class inheritance in the model
 
 * Various bugfixes, usability and speed improvements
 
 * Code cleanup