@@ -10,6 +10,7 @@ class ImageDelegate(FileDelegate):
     """
     
     editor = editors.ImageEditor
+    margin = 2
     
     def paint(self, painter, option, index):
         painter.save()
@@ -18,10 +19,13 @@ class ImageDelegate(FileDelegate):
         
         if pixmap.width() > 0 and pixmap.height() > 0:
             rect = option.rect
-            rect = QtCore.QRect(rect.left()+max(0, rect.width()-pixmap.width())/2, 
-                                rect.top()+max(0, rect.height()-pixmap.height())/2, 
-                                pixmap.width(), pixmap.height())
-            QtGui.QApplication.style().drawItemPixmap(painter, rect, 1, pixmap)
+            w_margin = max(0, rect.width() - pixmap.width())/2 + self.margin
+            h_margin = max(0, rect.height()- pixmap.height())/2 + self.margin
+            rect = QtCore.QRect(rect.left() + w_margin, 
+                                rect.top() + h_margin , 
+                                rect.width() - w_margin * 2, 
+                                rect.height() - h_margin * 2 )
+            painter.drawPixmap( rect, pixmap )
             pen = QtGui.QPen(Qt.darkGray)
             pen.setWidth(3)
             painter.setPen(pen)
